--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -1,5 +1,5 @@
 <html>
-    <title>Node App</title>
+    <title>Sistema Controle Financeiro</title>
     <head>
         <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="/css/bootstrap-datepicker.min.css">
@@ -13,7 +13,7 @@
             <nav class="navbar navbar-inverse">
                     <div class="container-fluid">
                       <div class="navbar-header">
-                        <a class="navbar-brand" href="#">Node App</a>
+                        <a class="navbar-brand" href="#">Financeiro</a>
                       </div>
                       <ul class="nav navbar-nav">
                         <li><a href="/">Home</a></li>
@@ -26,13 +26,29 @@
                           </ul>
                         </li>
                         <li class="dropdown">
+                          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Cadastros
+                          <span class="caret"></span></a>
+                          <ul class="dropdown-menu">
+                            <!--<li><a href="/company">Company Listing</a></li>-->
+                            <li><a href="/fabricante">Fabricante</a></li>
+                            <li><a href="/Estabelecimento">Estabelecimento</a></li>
+                          </ul>
+                        </li>                        
+                        <!--li class="dropdown">
                                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">Employee
                                 <span class="caret"></span></a>
                                 <ul class="dropdown-menu">
                                   <li><a href="/employee">Employee Listing</a></li>
                                   <li><a href="/employee/add">Add Employee</a></li>
                                 </ul>
-                              </li>
+                              </li-->
+                        <li class="dropdown">
+                                <a class="dropdown-toggle" data-toggle="dropdown" href="#">Compras
+                                <span class="caret"></span></a>
+                                <ul class="dropdown-menu">
+                                  <li><a href="/compra">Cadastrar Compra</a></li>
+                                </ul>
+                              </li>                              
                       </ul>
                     </div>
                   </nav>
