--- a/views/estabelecimento/index.ejs
+++ b/views/estabelecimento/index.ejs
@@ -21,7 +21,7 @@
                             </td>
                            
                             <td>
-                                <a href="/estabelecimento/edit/<%= estabelecimento.id %>"><i class="fa fa-edit"></i></a>
+                                <a href="/estabelecimento/edit/<%= estabelecimento.estabelecimentoId %>"><i class="fa fa-edit"></i></a>
                             </td>
                         </tr>
                         <% }) %>
