--- a/views/fabricante/index.ejs
+++ b/views/fabricante/index.ejs
@@ -28,7 +28,7 @@
                                 <%= fabricante.nuCnpj %>
                             </td>
                             <td>
-                                <a href="/fabricante/edit/<%= fabricante.id %>"><i class="fa fa-edit"></i></a>
+                                <a href="/fabricante/edit/<%= fabricante.fabricanteId %>"><i class="fa fa-edit"></i></a>
                             </td>
                         </tr>
                         <% }) %>
