--- a/views/estabelecimento/edit.ejs
+++ b/views/estabelecimento/edit.ejs
@@ -4,14 +4,14 @@
         <div class="panel panel-default">
             <div class="panel-heading"><%= title %></div>
             <div class="panel-body">
-                <form class="form-horizontal" action="/estabelecimento/add" method="POST">
+                <form class="form-horizontal" action="/estabelecimento/edit/<%= estabelecimento[0].estabelecimentoId %>" method="POST">
                     <div class="form-group">
                       <label class="control-label col-sm-2" for="nome">Nome</label>
                       <div class="col-sm-10">
-                        <input type="text" class="form-control" name="nome" id="nome" placeholder="nome estabelecimento">
+                        <input type="text" class="form-control" name="nome" id="nome" placeholder="nome estabelecimento" 
+                               value="<%= estabelecimento[0].nmEstabelecimento %>">
                       </div>
                     </div>
-                    
                     <div class="form-group"> 
                       <div class="col-sm-offset-2 col-sm-10">
                         <button type="submit" class="btn btn-primary">Submit</button>
