--- a/views/fabricante/edit.ejs
+++ b/views/fabricante/edit.ejs
@@ -4,23 +4,25 @@
         <div class="panel panel-default">
             <div class="panel-heading"><%= title %></div>
             <div class="panel-body">
-                <form class="form-horizontal" action="/company/add" method="POST">
+                <form class="form-horizontal" action="/fabricante/edit/<%= fabricante[0].fabricanteId %>" method="POST">
                     <div class="form-group">
-                      <label class="control-label col-sm-2" for="name">Name</label>
+                      <label class="control-label col-sm-2" for="nomefab">Nome</label>
                       <div class="col-sm-10">
-                        <input type="text" class="form-control" name="name" id="name" placeholder="Enter name">
+                        <input type="text" class="form-control" name="nomefab" id="nomefab" placeholder="nome fabricante" 
+                               value="<%= fabricante[0].nmFabricante %>">
                       </div>
                     </div>
                     <div class="form-group">
-                        <label class="control-label col-sm-2" for="location">Location</label>
+                        <label class="control-label col-sm-2" for="nucnpj">CNPJ</label>
                         <div class="col-sm-10">
-                          <input type="text" class="form-control" name="location" id="location" placeholder="Enter location">
+                          <input type="text" class="form-control" name="nucnpj" id="nucnpj" placeholder="número CNPJ" 
+                                 value="<%= fabricante[0].nuCnpj %>" maxlength="20">
                         </div>
                       </div>
                     <div class="form-group"> 
                       <div class="col-sm-offset-2 col-sm-10">
                         <button type="submit" class="btn btn-primary">Submit</button>
-                        <a href="/company"><button type="button" class="btn btn-default">Cancel</button></a>
+                        <a href="/fabricante"><button type="button" class="btn btn-default">Cancel</button></a>
                       </div>
                     </div>
                   </form>
