--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -18,30 +18,29 @@
                       <ul class="nav navbar-nav">
                         <li><a href="/">Home</a></li>
                         <li class="dropdown">
-                          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Company
+                          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Usuário
                           <span class="caret"></span></a>
                           <ul class="dropdown-menu">
-                            <li><a href="/company">Company Listing</a></li>
-                            <li><a href="/company/add">Add Company</a></li>
+                            <li><a href="/usuario">Listar Usuário</a></li>
+                            <li><a href="/usuario/add">Add Usuário</a></li>
                           </ul>
                         </li>
                         <li class="dropdown">
                           <a class="dropdown-toggle" data-toggle="dropdown" href="#">Cadastros
                           <span class="caret"></span></a>
                           <ul class="dropdown-menu">
-                            <!--<li><a href="/company">Company Listing</a></li>-->
                             <li><a href="/fabricante">Fabricante</a></li>
                             <li><a href="/Estabelecimento">Estabelecimento</a></li>
                           </ul>
-                        </li>                        
-                        <!--li class="dropdown">
-                                <a class="dropdown-toggle" data-toggle="dropdown" href="#">Employee
+                        </li>   
+                        <li class="dropdown">
+                                <a class="dropdown-toggle" data-toggle="dropdown" href="#">Pessoa
                                 <span class="caret"></span></a>
                                 <ul class="dropdown-menu">
-                                  <li><a href="/employee">Employee Listing</a></li>
-                                  <li><a href="/employee/add">Add Employee</a></li>
+                                  <li><a href="/pessoa">Listar Pessoa</a></li>
+                                  <li><a href="/pessoa/add">Add Pessoa</a></li>
                                 </ul>
-                              </li-->
+                        </li>                                             
                         <li class="dropdown">
                                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">Compras
                                 <span class="caret"></span></a>
