--- a/views/pessoa/add.ejs
+++ b/views/pessoa/add.ejs
@@ -4,27 +4,22 @@
         <div class="panel panel-default">
             <div class="panel-heading"><%= title %></div>
             <div class="panel-body">
-                <form class="form-horizontal" action="/employee/add" method="POST">
+                <form class="form-horizontal" action="/pessoa/add" method="POST">
                     <div class="form-group">
-                        <label class="control-label col-sm-2" for="name">Name</label>
+                        <label class="control-label col-sm-2" for="nome">Nome</label>
                         <div class="col-sm-10">
-                          <input type="text" class="form-control" name="name" id="name" placeholder="Enter Name">
+                          <input type="text" class="form-control" name="nome" id="nome" placeholder="Nome pessoa">
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="control-label col-sm-2" for="email">Email</label>
+                        <label class="control-label col-sm-2" for="usuario">Usuário</label>
                         <div class="col-sm-10">
-                          <input type="text" class="form-control" name="email" id="email" placeholder="Enter Email">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label col-sm-2" for="location">Company</label>
-                        <div class="col-sm-10">
-                          <select class="form-control" name="company" id="company">
-                                <option value="">Select Company</option>
-                            <% if (companies) { %>
-                                <% companies.forEach(function(company){ %>
-                                    <option value="<%= company.id %>"><%= company.name %> (<%= company.location %>) </option>
+                          <select class="form-control" name="usuario" id="usuario">
+                                <option value="">Selecione o usuario</option>
+                            <% if (usuarios) { %>
+                                <% usuarios.forEach(function(usuario){ %>
+                                    <option value="<%= usuario.usuarioId %>"><%= usuario.nmUsuario %> (<%= usuario.nmEmail %>) 
+                                    </option>
                                 <% }) %>
                             <% } %>         
                             
@@ -32,15 +27,17 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="control-label col-sm-2" for="date_of_birth">Date of Birth</label>
+                        <label class="control-label col-sm-2" for="dtNascimento">Data nascimento</label>
                         <div class="col-sm-10">
-                          <input type="text" class="form-control datepicker" name="date_of_birth" id="date_of_birth" placeholder="Date of Birth">
+                          <input type="text" class="form-control datepicker" name="dtNascimento" id="dtNascimento" 
+                                 placeholder="data nascimento">
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="control-label col-sm-2" for="joining_date">Joining Date</label>
+                        <label class="control-label col-sm-2" for="dtAdmissao">Data admissão</label>
                         <div class="col-sm-10">
-                          <input type="text" class="form-control datepicker" name="joining_date" id="joining_date" placeholder="Joining Date">
+                          <input type="text" class="form-control datepicker" name="dtAdmissao" id="dtAdmissao" 
+                                 placeholder="data admissão">
                         </div>
                     </div>
                     <div class="form-group">
@@ -53,7 +50,7 @@
                     <div class="form-group"> 
                       <div class="col-sm-offset-2 col-sm-10">
                         <button type="submit" class="btn btn-primary">Submit</button>
-                        <a href="/employee"><button type="button" class="btn btn-default">Cancel</button></a>
+                        <a href="/pessoa"><button type="button" class="btn btn-default">Cancel</button></a>
                       </div>
                     </div>
                   </form>
