--- a/views/usuario/add.ejs
+++ b/views/usuario/add.ejs
@@ -4,23 +4,23 @@
         <div class="panel panel-default">
             <div class="panel-heading"><%= title %></div>
             <div class="panel-body">
-                <form class="form-horizontal" action="/company/edit/<%= company[0].id %>" method="POST">
+                <form class="form-horizontal" action="/usuario/add" method="POST">
                     <div class="form-group">
-                      <label class="control-label col-sm-2" for="name">Name</label>
+                      <label class="control-label col-sm-2" for="nome">Nome</label>
                       <div class="col-sm-10">
-                        <input type="text" class="form-control" name="name" id="name" placeholder="Enter name" value="<%= company[0].name %>">
+                        <input type="text" class="form-control" name="nome" id="nome" placeholder="Nome usuário">
                       </div>
                     </div>
                     <div class="form-group">
-                        <label class="control-label col-sm-2" for="location">Location</label>
+                        <label class="control-label col-sm-2" for="nmEmail">Email</label>
                         <div class="col-sm-10">
-                          <input type="text" class="form-control" name="location" id="location" placeholder="Enter location" value="<%= company[0].location %>">
+                          <input type="email" class="form-control" name="nmEmail" id="nmEmail" placeholder="Email">
                         </div>
                       </div>
                     <div class="form-group"> 
                       <div class="col-sm-offset-2 col-sm-10">
                         <button type="submit" class="btn btn-primary">Submit</button>
-                        <a href="/company"><button type="button" class="btn btn-default">Cancel</button></a>
+                        <a href="/usuario"><button type="button" class="btn btn-default">Cancel</button></a>
                       </div>
                     </div>
                   </form>
