--- a/views/usuario/index.ejs
+++ b/views/usuario/index.ejs
@@ -2,28 +2,30 @@
 <div class="row">
     <div class="col-sm-12">
         <div class="panel panel-default">
-            <div class="panel-heading"><%= title %><a href="/company/add" class= "pull-right"><i class="fa fa-plus fa-fw"></i>Add New Company</a></div>
+            <div class="panel-heading"><%= title %><a href="/usuario/add" class= "pull-right"><i class="fa fa-plus fa-fw">                
+            </i>Add New Usuário</a>
+        </div>
             <div class="panel-body">
                 <table class="table table-bordered">
                     <thead>
                         <tr>
-                            <th>Name</th>
-                            <th>Location</th>
+                            <th>Nome</th>
+                            <th>Email</th>
                             <th>Action</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <% if (companies) { %>
-                        <% companies.forEach(function(company){ %>
+                        <% if (usuarios) { %>
+                        <% usuarios.forEach(function(usuario){ %>
                         <tr>
                             <td>
-                                <%= company.name %>
+                                <%= usuario.nmUsuario %>
                             </td>
                             <td>
-                                <%= company.location %>
+                                <%= usuario.nmEmail %>
                             </td>
                             <td>
-                                <a href="/company/edit/<%= company.id %>"><i class="fa fa-edit"></i></a>
+                                <a href="/usuario/edit/<%= usuario.usuarioId %>"><i class="fa fa-edit"></i></a>
                             </td>
                         </tr>
                         <% }) %>
