--- a/views/compra/add.ejs
+++ b/views/compra/add.ejs
@@ -8,7 +8,8 @@
                     <div class="form-group">
                             <label class="control-label col-sm-2" for="dtCompra">Data Compra</label>
                             <div class="col-sm-10">
-                              <input type="text" class="form-control datepicker" name="dtCompra" id="dtCompra" placeholder="Data compra">
+                              <input type="text" class="form-control datepicker" name="dtCompra" id="dtCompra" 
+                                     placeholder="Data compra" autocomplete="off">
                             </div>
                         </div>
                     <div class="form-group">
