--- a/views/compra/index.ejs
+++ b/views/compra/index.ejs
@@ -26,7 +26,7 @@
                                         <td><%= moment(compra.dtCompra).format(shortDateFormat) %></td>
                                         <td>
                                             <a href="/compra/edit/<%= compra.compraId %>"><i class="fa fa-edit"></i></a>
-                                            <a href="#" class="view-compra" data-compra-id="<%= compra.compraId %>"><i class="fa fa-eye"></i></a>
+                                            <a href="#" class="view-compra" data-compraId="<%= compra.compraId %>"><i class="fa fa-eye"></i></a>
                                         </td>
                                     </tr>
                                 <% }) %>
