--- a/views/pessoa/edit.ejs
+++ b/views/pessoa/edit.ejs
@@ -19,7 +19,7 @@
                                 <option value="">Selecione o usuario</option>
                             <% if (usuarios) { %>
                                 <% usuarios.forEach(function(usuario){ %>
-                                    <option value="<%= usuario.usuarioId %>"  
+                                    <option value="<%= pessoa.usuarioId %>"  
                                             selected="<%= (usuario.usuarioId==pessoa.usuarioId) ? "selected" : "" %>">
                                             <%= usuario.nmUsuario %> (<%= usuario.nmEmail %>) 
                                     </option>
@@ -30,10 +30,10 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="control-label col-sm-2" for="dtNascimento">Date of Birth</label>
+                        <label class="control-label col-sm-2" for="dtNascimento">Dt. Nascimento</label>
                         <div class="col-sm-10">
                           <input type="text" class="form-control datepicker" name="dtNascimento" id="dtNascimento" 
-                                 value="<%= moment(pessoa.dtNascimento).format(shortDateFormat) %>" placeholder="Data de nascimento">
+                                 value="<%= pessoa.dtNascimento %>" placeholder="Data de nascimento">
                         </div>
                     </div>
                     <div class="form-group">
